# simple_api_nats

./: Cargo.toml
src/: handler.rs  main.rs  model.rs
