[package]
name = "simple_api_nats"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.36.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["v4"] }
